# phrase_comparator

./: .gitignore  Cargo.toml  phrases.txt
src/: main.rs  phrases.rs  process_message.rs
