[package]
name = "xalk_q"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.13", default-features = false, features = ["async-http-client"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"