[package]
name = " phrase_comparator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.14.0", default-features = false, features = ["async-http-client"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"